Lots of meta data for SEO including favicons added in .ico format and additional png versions of different sizes. Fixed snap to articles from vipwithcode.html.

--- a/index.html
+++ b/index.html
@@ -3,26 +3,55 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-			<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'G-3KX9VK5CCH');
-	</script>
-		<link rel="icon" href="/favicon.png" type="image/png" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+			gtag('config', 'G-3KX9VK5CCH');
+		</script>
+	
+		<!-- Meta Description (for SEO) -->
 		<title>Join the Crypto Community | OFiDCrypt</title>
-		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
-		<!-- Essential JS libraries if used by other scripts -->
-		<script src="assets/js/browser.min.js" defer></script>
-		<script src="/assets/js/main.js" defer></script>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
+		<meta name="author" content="Tokin ⬢">
+	
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="Join the Crypto Community | OFiDCrypt">
+		<meta property="og:description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta property="og:url" content="https://ofidcrypt.com">
+		<meta property="og:type" content="website">
+	
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Join the Crypto Community | OFiDCrypt">
+		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta name="twitter:url" content="https://ofidcrypt.com">
+	
+		<!-- Default ICO file with multiple sizes -->
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		
+		<!-- Specific PNG sizes for modern browsers -->
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="24x24" href="/favicon-24x24.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+		<link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="/assets/css/main.css">
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css"></noscript>
+	
+		<!-- JavaScript Libraries -->
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+		<script src="/assets/js/browser.min.js" defer></script>
+		<script src="/assets/js/main.js" defer></script>
 	</head>
 
 	<body class="is-preload">
@@ -88,7 +117,7 @@
 
 					<!-- Header for Pagination -->
 					<header>
-						<div class="pagination">
+						<div class="pagination" id="pagination-controls-top">
 							<a href="#" class="previous">Prev</a>
 							<a href="#" class="page active" data-page="1">1</a>
 							<a href="#" class="page" data-page="2">2</a>
