--- a/pages/about.html
+++ b/pages/about.html
@@ -3,27 +3,62 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-			<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
 
-		gtag('config', 'G-3KX9VK5CCH');
-	</script>
-		<link rel="icon" href="../favicon.png" type="image/png" />
+			gtag('config', 'G-3KX9VK5CCH');
+		</script>
+		
+		<!-- Meta Description (for SEO) -->
+		<title>About OFiDCrypt | Making Crypto Easy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<title>Join the Crypto Community | OFiDCrypt</title>
-		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
+		<meta name="description"
+			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta name="keywords" content="cryptocurrency, code wallet, vip, OFiDCrypt, crypto community">
+		<meta name="author" content="Tokin ⬢">
+		
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
+		<meta property="og:description"
+			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta property="og:url" content="https://ofidcrypt.com/pages/about.html">
+		<meta property="og:type" content="website">
+		
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
+		<meta name="twitter:description"
+			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta name="twitter:url" content="https://ofidcrypt.com/pages/about.html">
+		
+		<!-- Default ICO file with multiple sizes -->
+		<link rel="icon" type="image/x-icon" href="../favicon.ico">
+		
+		<!-- Specific PNG sizes for modern browsers -->
+		<link rel="icon" type="image/png" sizes="512x512" href="../favicon.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="24x24" href="../favicon-24x24.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="48x48" href="../favicon-48x48.png">
+		
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="../assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+		<noscript>
+			<link rel="stylesheet" href="../assets/css/noscript.css" />
+		</noscript>
+		
 		<!-- Essential JS libraries if used by other scripts -->
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/browser.min.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	</head>	
+		</head>
 	
 	<body class="is-preload">
 
@@ -88,8 +123,8 @@
 									<h2>Learn, Earn & Spend</h2>
 									<!-- Section Description -->
 									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-									<h2>Who is Tokin ⬢ Cypher</h2>
-									<p>Tokin ⬢ Cypher is the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</b> on <b>𝕏</a></b></p>
+									<h2>Who is Tokin ⬢</h2>
+									<p>They are the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</b> on <b>𝕏</a></b></p>
 								</header>
 							</section>
 					</div>
