Added logo to subpages and added subpages logo class, added validated JSO and fixed spelling errors.

--- a/pages/about.html
+++ b/pages/about.html
@@ -65,9 +65,9 @@
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
-				<!-- Header -->
-				<header id="header">
-					<div class="logo">OF<span class="i">i</span>DCrypt</div>
+				<!-- Header Subpage-->
+				<header class="header-subpage">
+					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
 				</header>
 
 				<!-- Nav -->
@@ -124,7 +124,7 @@
 									<!-- Section Description -->
 									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
 									<h2>Who is Tokin ⬢</h2>
-									<p>They are the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</b> on <b>𝕏</a></b></p>
+									<p>Tokin ⬢ is the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</a></b> on <b>𝕏</b></p>
 								</header>
 							</section>
 					</div>
@@ -199,7 +199,7 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul><li><a href="#">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
-					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher 2024</li></ul>
+					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
