--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -65,9 +65,9 @@
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
-				<!-- Header -->
-				<header id="header">
-					<div class="logo">OF<span class="i">i</span>DCrypt</div>
+				<!-- Header Subpage-->
+				<header class="header-subpage">
+					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
 				</header>
 
 				<!-- Nav -->
