Changes to display logo on subpages.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div id="intro">
 						<h1>Cryptocurrency<br />
 						Made Easy</h1>
-						<p>"We open the door to understanding our World of Digital Assets together through simple apps, informative articles,<br>
+						<p>"We open the door to our World of Digital Assets for everyone, making crypto accessible through simple apps, informative articles,<br>
 							and shared community experiences."</p>
 						<div id="custom-subheading">
 							<p>Visit us on 𝕏</p>
