Minor text changes and css adjustment for portrait orientation auto 175%

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<p>"We open the door to our World of Digital Assets for everyone, making crypto accessible through simple apps, informative articles,<br>
 							and shared community experiences."</p>
 						<div id="custom-subheading">
-							<p>Visit us on 𝕏</p>
+							<p>Join the Conversation on 𝕏</p>
 							<h2><a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a></h2>
 						</div>
 						
