Added alt descriptions and languiage tags to pages to meet Bing Toolkit requirementys, shortened index meta description, reverted js to previous build to restore load order and fix link to articles executing properly from vipwithcode.html.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
+<html lang="en-GB">
 <!--Massively by HTML5 UP | html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
-<html>
 	<head>
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
@@ -32,13 +32,13 @@
 		<title>Join the Crypto Community | OFiDCrypt</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
 	
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="Join the Crypto Community | OFiDCrypt">
-		<meta property="og:description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta property="og:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
 		<meta property="og:url" content="https://ofidcrypt.com">
 		<meta property="og:type" content="website">
@@ -46,7 +46,7 @@
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Join the Crypto Community | OFiDCrypt">
-		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy.">
+		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
 		<meta name="twitter:url" content="https://ofidcrypt.com">
 	
@@ -68,6 +68,10 @@
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<script src="/assets/js/browser.min.js" defer></script>
 		<script src="/assets/js/main.js" defer></script>
+
+		<!-- Meta Language -->
+		<meta http-equiv='content-language' content='en-gb'>
+
 	</head>
 
 	<body class="is-preload">
@@ -151,7 +155,7 @@
 										<span class="date">October 11, 2024</span>
 										<h2><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency">01 A Beginners Introduction<br /> to Crypto</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/pic06.jpg" alt="" /></a>
+									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/pic06.jpg" alt="Article Title: A Beginners Introduction to Cryptocurrency" /></a>
 									<p>Learning the absolute basics from someone other than huge corporations can remove bias. 
 										It is important to our brand that we provide the necessary knowledge for people to make 
 										their own decisions! Enjoy this fresh take on an intro to crypto.</p>
@@ -160,12 +164,13 @@
 											class="button">Preview</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">October 12, 2024</span>
 										<h2><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins">02 The Risks of<br /> Meme Coins</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img src="assets/images/pic07.jpg" alt="" /></a>
+									<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img src="assets/images/pic07.jpg" alt="Article Title: The Risks of Meme Coins" /></a>
 									<p>Many investment opportunities can exist in crypto, and it's easy to see how it can become overwhelming. The trick is knowing what 
 										to look for to spot a project’s intent. By project, I mean a crypto coin or token. Some cryptocurrencies are not controlled by 
 										any single entity, known as decentralization. Some are, and now you'll be equipped to spot them.</p>
@@ -174,12 +179,13 @@
 											class="button">Preview</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">October 21, 2024</span>
 										<h2><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03 Crypto 101:<br /> Fundamentals</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
+									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="Article Title: Crypto 101: Fundamentals & Breaking Barriers" /></a>
 									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is 
 										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to 
 										current financial systems, there really should be no barriers left to hold you back.</p>
@@ -188,12 +194,13 @@
 											class="button">Preview</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">October 21, 2104</span>
 										<h2><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"></a>04 Learn About a Crypto Project: Kin Token</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/pic05.jpg" alt="" /></a>
+									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/pic05.jpg" alt="Article Title: Learn About a Crypto Project: Kin Token" /></a>
 									<p>Learn about a new cryptocurrency called Kin, and how it has the potential to replicate the success and growth of Bitcoin. 
 										It enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap! 
 										You can  also send money to friends, aligning with the vision of decentralized, permissionless transactions.</p>
