--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en-GB">
 <!--Massively by HTML5 UP | html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
@@ -58,7 +59,11 @@
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/browser.min.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-		</head>
+
+		<!-- Meta Language -->
+		<meta http-equiv='content-language' content='en-gb'>
+
+	</head>
 	
 	<body class="is-preload">
 
