--- a/pages/elements.html
+++ b/pages/elements.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en-GB">
 <!--Massively by HTML5 UP | html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
@@ -23,6 +24,10 @@
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/browser.min.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+		<!-- Meta Language -->
+		<meta http-equiv='content-language' content='en-gb'>
+
 	</head>	
 
 	<body class="is-preload">
@@ -394,26 +399,26 @@
 									<h2>Image</h2>
 
 									<h3>Fit</h3>
-									<span class="image fit"><img src="../assets/images/pic01.png" alt="" /></span>
+									<span class="image fit"><img src="../assets/images/pic01.png" alt="Article Placeholder Blank" /></span>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="Placeholder Image 02" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="Placeholder Image 03" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="Placeholder Image 04" /></span></div>
 											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="Placeholder Image 04" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="Placeholder Image 02" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="Placeholder Image 03" /></span></div>
 											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic03.jpg" alt="Placeholder Image 03" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic04.jpg" alt="Placeholder Image 04" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="../assets/images/pic02.jpg" alt="Placeholder Image 02" /></span></div>
 										</div>
 									</div>
 
 									<h3>Left &amp; Right</h3>
-									<p><span class="image left"><img src="../assets/images/pic08.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
-									<p><span class="image right"><img src="../assets/images/pic09.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
+									<p><span class="image left"><img src="../assets/images/pic08.jpg" alt="Placeholder Image 08" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
+									<p><span class="image right"><img src="../assets/images/pic09.jpg" alt="Placeholder Image 09" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
 
 									<hr />
 
