--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en-GB">
 <!--Massively by HTML5 UP | html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
@@ -58,7 +59,11 @@
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/browser.min.js"></script>
-		</head>
+
+		<!-- Meta Language -->
+		<meta http-equiv='content-language' content='en-gb'>
+
+	</head>
 	
 	<body class="is-preload">
 
@@ -138,7 +143,7 @@
 
 							<div class="image main">
 								<a href="https://getcode.com" target="_blank">
-									<img src="../assets/images/pic10.jpg" alt="" />
+									<img src="../assets/images/pic10.jpg" alt="Login Button Image for Code Wallet" />
 								</a>
 							</div>
 						</section>
