Added affiliates page.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
+							<li><a href="pages/afiliates.html">Affiliates</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -294,7 +295,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="#">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="/pages/about.html">About</a></li></ul>
+					<ul><li><a href="/pages/affiliates.html">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="/pages/about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
