--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
-							<li><a href="pages/afiliates.html">Affiliates</a></li>
+							<li><a href="pages/affiliates.html">Affiliates</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
