--- a/pages/affiliates.html
+++ b/pages/affiliates.html
@@ -81,7 +81,7 @@
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="about.html">About Us</a></li>
-							<li class="active"><a href="afiliates.html">Affiliates</a></li>
+							<li class="active"><a href="affiliates.html">Affiliates</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
