Fixed formatting on affiliate page and design consistencies.

--- a/pages/about.html
+++ b/pages/about.html
@@ -80,7 +80,7 @@
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="vipwithcode.html">VIP Area</a></li>
-							<li class="active"></li><a href="about.html">About Us</a></li>
+							<li class="active"><a href="about.html">About Us</a></li>
 							<li><a href="affiliates.html">Affiliates</a></li>
 						</ul>
 						<ul class="icons">
@@ -204,7 +204,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliates.html"><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliates.html">Affiliates</a></li>><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
