--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -79,9 +79,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li class="active"></li><a href="vipwithcode.html">VIP Area</a></li>
+							<li class="active"><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="about.html">About Us</a></li>
-							<li><a href="affiliates.html">Affiliates</a></li>
+							<li><a href="affiliate.html">Affiliate</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -219,8 +219,8 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliates.html">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
-					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher 2024</li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 			</div>
