Minor adjustments and meta update for new affiliate page.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -15,29 +15,29 @@
 		</script>
 		
 		<!-- Meta Description (for SEO) -->
-		<title>Affiliate Partners | Forming Collaborative Relationships</title>
+		<title>OFiDCrypt Partners | Forming Collaborative Relationships</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description"
-			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta name="keywords" content="cryptocurrency, code wallet, vip, OFiDCrypt, crypto community">
+			content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
+		<meta name="keywords" content="cryptocurrency, code wallet, affiliate, partner, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
 		
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
+		<meta property="og:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta property="og:description"
-			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+			content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
 		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
-		<meta property="og:url" content="https://ofidcrypt.com/pages/about.html">
+		<meta property="og:url" content="https://ofidcrypt.com/pages/affiliate.html">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta name="twitter:description"
-			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+			content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
 		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
-		<meta name="twitter:url" content="https://ofidcrypt.com/pages/about.html">
+		<meta name="twitter:url" content="https://ofidcrypt.com/pages/affiliate.html">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -148,7 +148,7 @@
 				<footer id="footer">
 					<section>
 						<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-							<h2 class="centered-heading">Apply for a Placement</h2>
+							<h2 class="centered-heading">Become a Partner</h2>
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
