--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="#">Disclaimers</a></li> <li><a href="#">Contests</a></li> <li><a href="/pages/about.html">About</a></li></ul>
-					<ul>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</ul>
-					<ul>Design: <a href="https://html5up.net">HTML5 UP</a></ul>
+					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
+					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
