Adjusted one meta tag on affiliate.html

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -33,7 +33,7 @@
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
+		<meta name="twitter:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta name="twitter:description"
 			content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
 		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
