Added community page and configurations, js for pagination needs adjustment for dynamic pages.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 							<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 							<li><a href="pages/affiliate.html">Affiliate</a></li>
+							<!--<li><a href="/community.html">Community</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -230,7 +231,7 @@
 					<footer id="footer">
 						<section>
 							<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-								<h2 class="centered-heading">Got Questions?</h2>
+								<h2 class="centered-heading">Suggest A Topic</h2>
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -295,7 +296,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="#">Community</a></li> <li><a href="#">Disclaimers</a></li> <li><a href="/pages/about.html">About</a></li></ul>
+					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="#">Disclaimers</a></li> <li><a href="/pages/about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
