--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -82,6 +82,7 @@
 							<li><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="about.html">About Us</a></li>
 							<li class="active"><a href="affiliate.html">Affiliate</a></li>
+							<!--<li><a href="../community.html">Community</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
@@ -213,7 +214,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="#">Community</a></li><li><a href="#">Disclaimers</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="#">Disclaimers</a></li><li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
