Formatting and text changes.

--- a/community.html
+++ b/community.html
@@ -119,22 +119,22 @@
 			<table>
 				<thead>
 					<tr>
-						<th>Platform</th>
-						<th>Url</th>
+						<th>Join, Follow & Visit</th>
+						<th>Link</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>Telegram</td>
-						<td>@</td>
+						<td><a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a></td>
 					</tr>
 					<tr>
-						<td>Discord</td>
-						<td>@</td>
+						<td>𝕏</td>
+						<td><a href="https://x.com/Kin_Ecosystem">Kin_Ecosystem 𝕏 Profile</a></td>
 					</tr>
 					<tr>
-						<td>Website</td>
-						<td>@</td>
+						<td>Community Website</td>
+						<td><a href="https://www.kineconomy.com/">kineconomy.com</a></td>
 					</tr>
 				</tbody>
 			</table>
@@ -161,22 +161,22 @@
 			<table>
 				<thead>
 					<tr>
-						<th>Platform</th>
-						<th>Url</th>
+						<th>Join, Follow & Visit</th>
+						<th>Link</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>Telegram</td>
-						<td>@</td>
+						<td><a href="#">@</a></td>
 					</tr>
 					<tr>
-						<td>Discord</td>
-						<td>@</td>
+						<td>𝕏</td>
+						<td><a href="#">@</a></td>
 					</tr>
 					<tr>
-						<td>Website</td>
-						<td>@</td>
+						<td>Community Website</td>
+						<td><a href="#">@</a></td>
 					</tr>
 				</tbody>
 			</table>
@@ -190,8 +190,8 @@
 
 		<!-- Main -->
 		<div id="main">
-			<!-- Featured Post -->
-			<article class="post featured">
+			<!-- Community Featured Post -->
+			<article class="community featured">
 				<header class="major">
 					<h2>Kin Monthly<br />
 						Updates</h2>
@@ -227,7 +227,9 @@
 								<h2><a href="https://pennypost.co/p/727100917/kin-economy-monthly-update---october-24">Kin Economy<br /> October Update</a></h2>
 							</header>
 							<a href="https://pennypost.co/p/727100917/kin-economy-monthly-update---october-24" class="image fit"><img src="assets/images/octmonthlykin01.png" alt="Article Title: Kin Monthy Update for October" /></a>
-							<p>Published on Pennypost: Code app required to purchase, download from <b><a href="@getcode.com">here</a></b>.</p>
+							<p>This article is published on Pennypost.</p>
+							<p>This article purchase supports the writer. Optionally, you can leave a tip at the end of the article to show gratitude to the contributor.</p>
+							<p>Code app required to purchase, download from <b><a href="https://getcode.com">here</a></b>.</p>
 							<ul class="actions special">
 								<li><a href="https://pennypost.co/p/727100917/kin-economy-monthly-update---october-24"
 									class="button">Preview</a></li>
@@ -240,7 +242,9 @@
 								<h2><a href="https://pennypost.co/p/531621758/kin-economy-monthly-update---september-24">Kin Economy<br /> September Update</a></h2>
 							</header>
 							<a href="https://pennypost.co/p/531621758/kin-economy-monthly-update---september-24" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for September" /></a>
-							<p>Published on Pennypost: Code app required to purchase, download from <b><a href="@getcode.com">here</a></b>.</p>
+							<p>This article is published on Pennypost.</p>
+							<p>This article purchase supports the writer. Optionally, you can leave a tip at the end of the article to show gratitude to the contributor.</p>
+							<p>Code app required to purchase, download from <b><a href="https://getcode.com">here</a></b>.</p>
 							<ul class="actions special">
 								<li><a href="https://pennypost.co/p/531621758/kin-economy-monthly-update---september-24"
 									class="button">Preview</a></li>
@@ -253,7 +257,9 @@
 								<h2><a href="#">Kin Economy<br /> August Update</a></h2>
 							</header>
 							<a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for August" /></a>
-							<p>Published on Pennypost: Code app required to purchase, download from <b><a href="@getcode.com">here</a></b>.</p>
+							<p>This article is published on Pennypost.</p>
+							<p>This article purchase supports the writer. Optionally, you can leave a tip at the end of the article to show gratitude to the contributor.</p>
+							<p>Code app required to purchase, download from <b><a href="https://getcode.com">here</a></b>.</p>
 							<ul class="actions special">
 								<li><a href="#"
 									class="button">Preview</a></li>
@@ -267,6 +273,7 @@
 							</header>
 							<a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for July" /></a>
 							<p>This article is published on Medium.</p>
+							<p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
 							<ul class="actions special">
 								<li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde"
 									class="button">Preview</a></li>
@@ -280,6 +287,7 @@
 							</header>
 							<a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for June" /></a>
 							<p>This article is published on Medium.</p>
+							<p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
 							<ul class="actions special">
 								<li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069"
 									class="button">Preview</a></li>
@@ -293,6 +301,7 @@
 							</header>
 							<a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955" class="image fit"><img src="assets/images/maymonthlykin01.png" alt="Article Title: Kin Monthy Update for May" /></a>
 							<p>This article is published on Medium.</p>
+							<p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
 							<ul class="actions special">
 								<li><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955"
 									class="button">Preview</a></li>
