--- a/monthly-posts-page2.html
+++ b/monthly-posts-page2.html
@@ -1,54 +1,62 @@
 <!-- Monthly Posts Page 2 Content -->
 <!-- Monthly Container -->
 <section id="monthly-container">
-    <div id="monthly-community-posts">
+    <div id="monthly-posts-page2-posts">
         <section class="monthly-posts">
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">August, 2024</span>
+                    <h2><a href="#">Kin Economy<br /> August Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for August" /></a>
+                <p>This article is published on Pennypost.</p>
+                <p>This article purchase supports the writer. Optionally, you can leave a tip at the end of the article to show gratitude to the contributor.</p>
+                <p>Code app required to purchase, download from <b><a href="https://getcode.com">here</a></b>.</p>
                 <ul class="actions special">
                     <li><a href="#"
-                        class="button">Coming Soon</a></li>
+                        class="button">Preview</a></li>
                 </ul>
             </article>
+
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">July, 2024</span>
+                    <h2><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde">Kin Economy<br /> July Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for July" /></a>
+                <p>This article is published on Medium.</p>
+                <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
-                    <li><a href="#"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-07-24-7bd5cb1a6cde"
+                        class="button">Preview</a></li>
                 </ul>
             </article>
+
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">June, 2024</span>
+                    <h2><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069">Kin Economy<br /> June Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069" class="image fit"><img src="assets/images/pic03.jpg" alt="Article Title: Kin Monthy Update for June" /></a>
+                <p>This article is published on Medium.</p>
+                <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
-                    <li><a href="#"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://kineconomy.medium.com/kin-economy-monthly-update-06-24-9dee8aaaf069"
+                        class="button">Preview</a></li>
                 </ul>
             </article>
+
             <article>
                 <header>
-                    <span class="date">February 29, 2104</span>
-                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
+                    <span class="date">May, 2024</span>
+                    <h2><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955">Kin Economy<br /> May Update</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-                <p>"Exploring additional topics brings even more insights and perspectives..."</p>
+                <a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955" class="image fit"><img src="assets/images/maymonthlykin01.png" alt="Article Title: Kin Monthy Update for May" /></a>
+                <p>This article is published on Medium.</p>
+                <p>This article is available for free. Optionally, you can leave a tip <a href="https://tipcard.getcode.com/x/KinShips">here</a> to show gratitude to the contributor.</p>
                 <ul class="actions special">
-                    <li><a href="#"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://medium.com/@kinshipsx/kin-economy-monthly-update-05-24-fc9860154955"
+                        class="button">Preview</a></li>
                 </ul>
             </article>
         </section>
