--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 							<li><a href="pages/affiliate.html">Affiliate</a></li>
-							<!--<li><a href="/community.html">Community</a></li>-->
+							<li><a href="/community.html">Community</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
