--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -82,7 +82,7 @@
 							<li><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="about.html">About Us</a></li>
 							<li class="active"><a href="affiliate.html">Affiliate</a></li>
-							<!--<li><a href="../community.html">Community</a></li>-->
+							<li><a href="../community.html">Community</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-twitter"><span class="label">X</span></a></li>
