Lowered res of problem high res image for meta and page covers.

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
 		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta property="og:description"
 			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
 		<meta property="og:url" content="https://ofidcrypt.com/pages/about.html">
 		<meta property="og:type" content="website">
 		
@@ -36,7 +36,7 @@
 		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta name="twitter:description"
 			content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo01.png">
+		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
 		<meta name="twitter:url" content="https://ofidcrypt.com/pages/about.html">
 		
 		<!-- Default ICO file with multiple sizes -->
@@ -104,7 +104,7 @@
 									<p>We are committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future.</p>
 								</header>
 								<div class="video main">
-									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo01.png">
+									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo02-lowres.png">
 									  <source src="../assets/videos/vidlogo01.MP4" type="video/mp4">
 									</video>
 								  </div>
@@ -119,7 +119,7 @@
 										video.addEventListener('ended', function() {
 										  this.currentTime = 0; // Reset video to start
 										  this.pause(); // Pause the video
-										  this.poster = '../assets/images/bglogo01.png'; // Set the new poster image
+										  this.poster = '../assets/images/bglogo02-lowres.png'; // Set the new poster image
 										});
 									  });
 									});
