Update and shorten table text.

--- a/community.html
+++ b/community.html
@@ -130,7 +130,7 @@
 					</tr>
 					<tr>
 						<td>𝕏</td>
-						<td><a href="https://x.com/Kin_Ecosystem">Kin_Ecosystem 𝕏 Profile</a></td>
+						<td><a href="https://x.com/Kin_Ecosystem">Kin_Ecosystem</a></td>
 					</tr>
 					<tr>
 						<td>Community Website</td>
